# langchainRagasSmith

./: .env.example  .gitignore  README.md  pyproject.toml  rag_demo.py  requirements.txt
data/: eval_cases.example.json
rag_eval/: __init__.py  cli.py
rag_eval/config/: __init__.py  cases.py  settings.py
rag_eval/evaluation/: __init__.py  batch.py  ragas_metrics.py  single.py
rag_eval/integrations/: __init__.py
rag_eval/integrations/langsmith/: __init__.py  dataset.py  runs.py  smoke.py
rag_eval/rag/: __init__.py  pipeline.py
scripts/: __init__.py  check_traces.py  push_github.ps1  run_batch.py  run_single.py  smoke_trace.py
