[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval"
version = "1.0.0"
description = "LangChain × RAGAS × LangSmith 联合评估 RAG 应用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-core>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "datasets>=2.14.0",
    "faiss-cpu>=1.7.4",
    "ragas>=0.2.15,<0.3",
    "langsmith>=0.1.0",
]

[project.scripts]
rag-eval = "rag_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_eval*"]
